# rust-harness

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  goal.md
agents/: codex-review-harness-tui.md  codex-screen-flow-report.md
crates/harness-tui/: Cargo.toml  README.md
crates/harness-tui/examples/: smoke.rs
crates/harness-tui/src/: core.rs  diff.rs  headless.rs  input.rs  lib.rs  terminal.rs  text.rs
crates/harness-tui/src/components/: editor.rs  menu.rs  mod.rs  select.rs  spinner.rs  status.rs
crates/harness-tui/tests/: components.rs  core.rs  diff.rs  headless.rs  input.rs  terminal.rs  text.rs
docs/: improvement-audit-2026-07.md  interface-provider-deepseek-test.md  tui-reference-analysis.md
docs/superpowers/plans/: 2026-07-11-harness-tui-phase1.md
docs/superpowers/specs/: 2026-07-06-chat-tui-restyle-design.md  2026-07-11-harness-tui-design.md  2026-07-11-session-trace-persistence-design.md
src/: agent.rs  chat.rs  chat_client.rs  cli.rs  clipboard.rs  config.rs  diagnostics.rs  failover.rs  guardrails.rs  lib.rs  main.rs  model_client.rs  platform.rs  prompt.rs  providers.rs  repl.rs  request.rs  runtime.rs  session.rs  tui.rs
src/tools/: attachments.rs  files.rs  mod.rs  shell.rs
tests/: agent_loop.rs  cache_envelope.rs  chat_app.rs  chat_client.rs  cli.rs  clipboard.rs  config_store.rs  failover.rs  file_tool.rs  guardrails.rs  model_client.rs  platform_prompt.rs  provider_models.rs  provider_profiles.rs  proxy.rs  repl.rs  session_store.rs  shell_tool.rs  tool_runtime.rs  tool_scheduler.rs  tui_screen.rs  tui_stack.rs
