[workspace]
members = ["crates/harness-tui"]

[package]
name = "harness-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "harness"
path = "src/bin/harness.rs"

[dependencies]
blake3 = "1"
crossterm = "0.29"
ratatui = { version = "0.30.2", default-features = false, features = ["crossterm_0_29", "layout-cache", "underline-color"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"

[dev-dependencies]
tempfile = "3"
