[workspace]
members = ["crates/harness-tui"]

[package]
name = "harness-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "harness"
path = "src/bin/harness.rs"

[dependencies]
blake3 = "1"
harness-tui = { path = "crates/harness-tui" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "3"

[dev-dependencies]
tempfile = "3"
